//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Widget {
  id String [pk]
  name String [not null]
  schema Schema
  dataSources DataSource [not null]
}

Table DataSource {
  id String [pk]
  name String [not null]
  type String [not null]
  widget Widget
  widgetId String
  tournament TournamentDataSource
}

Table TournamentDataSource {
  id String [pk]
  dataSource DataSource [not null]
  tournamentId String [not null]
  maincast MaincastTournamentDataSource
  dota2 Dota2APITournamentDataSource
}

Table MaincastTournamentDataSource {
  id String [pk]
  tournamentDataSource TournamentDataSource [not null]
  tournamentId String [not null]
}

Table Dota2APITournamentDataSource {
  id String [pk]
  tournamentDataSource TournamentDataSource [not null]
  tournamentId String [not null]
}

Table Schema {
  id Int [pk, increment]
  name String [not null]
  components Component [not null]
  widget Widget [not null]
  widgetId String [unique, not null]
}

Table ComponentSchema {
  id Int [pk, increment]
  name String [not null]
  type String [not null]
  components Component [not null]
}

Table Component {
  id Int [pk, increment]
  schemaId Int [not null]
  schema Schema [not null]
  parentId Int
  parent ContainerComponent
  componentSchemaId Int [not null]
  componentSchema ComponentSchema [not null]
  container ContainerComponent
  text TextComponent
  image ImageComponent
  dataBinded DataBindedComponent
  dataSource DataSourceComponent
  eventsContainer EventsContainer
}

Table ContainerComponent {
  id Int [pk]
  component Component [not null]
  children Component [not null]
}

Table TextComponent {
  id Int [pk]
  component Component [not null]
  value String [not null]
}

Table ImageComponent {
  id Int [pk]
  component Component [not null]
  url String [not null]
}

Table DataBindedComponent {
  id Int [pk]
  component Component [not null]
  bindings String [not null]
}

Table DataSourceComponent {
  id Int [pk]
  component Component [not null]
  source String [not null]
}

Table EventsContainer {
  id Int [pk]
  component Component [not null]
  events Event [not null]
}

Table Event {
  id Int [pk]
  type String [not null]
  actions Action [not null]
  eventsComponentId Int
  eventsComponent EventsContainer
}

Table Action {
  id Int [pk]
  name String [not null]
  params ActionParam [not null]
  eventId Int
  event Event
}

Table ActionParam {
  id Int [pk]
  name String [not null]
  type String [not null]
  value String [not null]
  action Action
  actionId Int
}

Ref: DataSource.widgetId > Widget.id

Ref: TournamentDataSource.id - DataSource.id

Ref: MaincastTournamentDataSource.id - TournamentDataSource.id

Ref: Dota2APITournamentDataSource.id - TournamentDataSource.id

Ref: Schema.widgetId - Widget.id

Ref: Component.schemaId > Schema.id

Ref: Component.parentId - ContainerComponent.id

Ref: Component.componentSchemaId > ComponentSchema.id

Ref: ContainerComponent.id - Component.id

Ref: TextComponent.id - Component.id

Ref: ImageComponent.id - Component.id

Ref: DataBindedComponent.id - Component.id

Ref: DataSourceComponent.id - Component.id

Ref: EventsContainer.id - Component.id

Ref: Event.eventsComponentId > EventsContainer.id

Ref: Action.eventId > Event.id

Ref: ActionParam.actionId > Action.id